<resources>
    <string name="app_name">Marca de Choferes</string>
    <string name="my_text"><u>Privacy Policy and Terms</u></string>
    <string name="start">Comenzar</string>
    <string name="sign_up_title">Inicia sesión en tu cuenta</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Ha olvidado su contraseña?</string>
    <string name="sign_in">Inicia sesión</string>
    <string name="privacy_policy">Al iniciar sesión, usted acepta nuestra Política de privacidad y Términos. </string>
    <string name="Forgot_passwordTitle">¿Olvidó su contraseña?</string>
    <string name="forgot_password_discription">Ingrese su correo electrónico a continuación y le enviaremos un correo electrónico de restablecimiento. </string>
    <string name="submit">Enviar</string>
    <string name="otp_title">Introduzca el código de verificación</string>
    <string name="otp_discription">Le enviamos un código de verificación por correo electrónico.</string>
    <string name="create_new_password_screen">Crear una nueva contraseña</string>
    <string name="create_new_password_discription">Elija una contraseña segura.</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="loading">Carga</string>
    <string name="please_wait">espere por favor</string>
    <string name="Defult_time">jornada laboral</string>
    <string name="Work_Time">Tiempo trabajado</string>
    <string name="break_time">Descansar</string>
    <string name="over_time">Horas extras</string>
    <string name="start_Timer">Empezar</string>
    <string name="search_here">Buscar vehículo aquí ...</string>
    <string name="take_break">Descansar</string>
    <string name="end_day">Finalizar jornada</string>
    <string name="select_status">Selección estado</string>
    <string name="vehicle">Vehículo </string>
    <string name="end_break">Fin del descanso</string>
    <string name="calender">Jornada</string>
    <string name="select_status_popup_window">Seleccionar estado</string>
    <string name="profile">Perfil</string>
    <string name="name">primer nombre</string>
    <string name="father_name">apellido</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="push_notification">Notificaciones push</string>
    <string name="notification_discription">No me lo perdería por el mundo. Pero si apareciera algo más, definitivamente no iría.</string>
    <string name="language">Idioma</string>
    <string name="about">Acerca de</string>
    <string name="configuration">Configuración</string>
    <string name="select_language">Seleccionar idioma</string>
    <string name="spanish">Español</string>
    <string name="portogous">Portugués</string>
    <string name="english">Inglés</string>
    <string name="firstname">primer nombre</string>
    <string name="confirm">confirmar</string>
    <string name="POR">POR</string>
    <string name="ENG">ENG</string>
    <string name="ESP">ESP</string>
</resources>