<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbox_shape"
    >
    <RelativeLayout
        android:id="@+id/upper_layout"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/close"
            android:text="@string/select_language"
            android:textColor="@color/Privacy_policy_text_color"
            android:textSize="@dimen/_17sdp" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_17sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_close" />


    </RelativeLayout>

    <TextView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_below="@id/upper_layout"
        android:layout_marginTop="@dimen/_3sdp"
        android:background="@drawable/ic_separator" />

    <RelativeLayout
        android:id="@+id/spanish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_25sdp">

        <TextView
            android:id="@+id/text0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/spanish"
            android:textColor="@color/auth_hint_color"
            android:textSize="@dimen/_14sdp" />

        <ImageView

            android:id="@+id/image0"
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/colorGrey" />

        <ImageView

            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/checkfrount" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/Portuguese"
        android:layout_below="@id/spanish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        >

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/portogous"
            android:textColor="@color/auth_hint_color"
            android:textSize="@dimen/_14sdp" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/colorGrey" />
        <ImageView
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/checkfrount" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/English"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Portuguese"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_15sdp">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/english"
            android:textColor="@color/auth_hint_color"
            android:textSize="@dimen/_14sdp" />


        <ImageView

            android:id="@+id/image1"
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/colorGrey" />

        <ImageView

            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/checkfrount" />


    </RelativeLayout>
</RelativeLayout>