<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mainscreen.profile.ProfileFragment"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@id/lowerlayout">

            <RelativeLayout
                android:id="@+id/upper_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_35sdp"
                android:background="@drawable/profilebg">

                <ImageView
                    android:id="@+id/upper_layout_frount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:id="@+id/namelayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_70sdp"
                    android:orientation="vertical"
                    android:transitionName="large_name_layout">

                    <TextView
                        android:id="@+id/Name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="Rodrigo "
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20sdp"
                        android:textStyle="bold"
                        android:transitionName="large_name"

                        />

                    <TextView
                        android:id="@+id/surName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_regular"
                        android:text="Àlvarez"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_19sdp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dateLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:transitionName="large_date">

                    <TextView
                        android:id="@+id/day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="Lunes"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:fontFamily="@font/open_sans_regular"
                        android:text="26 Oct."
                        android:textColor="@color/white"
                        android:textSize="@dimen/_17sdp"
                        android:textStyle="bold" />


                </LinearLayout>

            </RelativeLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_75sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/profile_img"
                android:transitionName="image_big" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/profile_image"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_58sdp"
                android:src="@drawable/ic_editicon" />

            <androidx.cardview.widget.CardView
                android:id="@+id/edit_profile"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_alignRight="@id/profile_image"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_61sdp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="@dimen/_8sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_pen" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:id="@+id/lowerlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:orientation="vertical"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/name"
                    android:textColor="@color/auth_hint_color"
                    android:textSize="@dimen/_10sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <RelativeLayout

                    android:id="@+id/EmailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_toStartOf="@id/editName"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@drawable/item_popup_btn_bg"
                    android:paddingStart="@dimen/_15sdp"

                    android:paddingEnd="@dimen/_15sdp">

                    <TextView
                        android:id="@+id/TitleName"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@color/white"
                        android:fontFamily="@font/open_sans_regular"
                        android:text="Rodrigo "
                        android:textColor="@color/Privacy_policy_text_color"
                        android:textSize="@dimen/_12sdp" />

                </RelativeLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/editName"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_alignParentEnd="true"
                       app:cardBackgroundColor="@color/black"
                        app:cardCornerRadius="@dimen/_4sdp"
                        >
                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                           android:layout_gravity="center"
                            android:background="@drawable/ic_edit"
                            />
                    </androidx.cardview.widget.CardView>
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/father_name"
                    android:textColor="@color/auth_hint_color"
                    android:textSize="@dimen/_10sdp" />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_toStartOf="@id/editSurname"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/item_popup_btn_bg"
        android:paddingStart="@dimen/_15sdp"

        android:paddingEnd="@dimen/_15sdp">

        <TextView
            android:id="@+id/FatherName"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@color/white"
            android:fontFamily="@font/open_sans_regular"
            android:text="Àlvarez"
            android:textColor="@color/Privacy_policy_text_color"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/editSurname"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_alignParentEnd="true"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/_4sdp"
        >
        <ImageView
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_gravity="center"
            android:background="@drawable/ic_edit"
            />
    </androidx.cardview.widget.CardView>
</RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/email"
                    android:textColor="@color/auth_hint_color"
                    android:textSize="@dimen/_10sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/item_popup_btn_bg"
                    android:paddingStart="@dimen/_15sdp"

                    android:paddingEnd="@dimen/_15sdp">

                    <TextView
                        android:id="@+id/Email"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:background="@color/white"
                        android:fontFamily="@font/open_sans_regular"
                        android:text="RodrigoÀlvarez@gmail.com"
                        android:textColor="@color/Privacy_policy_text_color"
                        android:textSize="@dimen/_12sdp" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/password"
                    android:textColor="@color/auth_hint_color"
                    android:textSize="@dimen/_10sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                  >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_toStartOf="@id/edit"
                        android:background="@drawable/item_popup_btn_bg"
                        android:paddingStart="@dimen/_15sdp"

                        android:paddingEnd="@dimen/_15sdp">

                        <TextView
                            android:id="@+id/password"
                            android:layout_width="@dimen/_200sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:background="@color/white"
                            android:fontFamily="@font/open_sans_regular"
                            android:text="● ● ● ● ● ● ● ● ● "
                            android:textColor="@color/Privacy_policy_text_color"
                            android:textSize="@dimen/_12sdp" />

                    </RelativeLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/edit"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_26sdp"
                        android:layout_alignParentEnd="true"
                        app:cardBackgroundColor="@color/black"
                        app:cardCornerRadius="@dimen/_4sdp"
                        >
                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_edit"
                            />
                    </androidx.cardview.widget.CardView>

                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/Logout"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/item_textboxredboarder"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@color/white"
                    android:fontFamily="@font/open_sans_regular"
                    android:gravity="center"
                    android:text="@string/log_out"
                    android:textColor="@color/red_text"
                    android:textSize="@dimen/_12sdp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bottemLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_65sdp"
                android:layout_alignParentBottom="true"
                />
        </LinearLayout>
    </RelativeLayout>
</layout>